[package]
name = "lock_free_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frunk = "0.4.0"
futures = "0.3.24"
futures-timer = "3.0.2"
pin-project = "1.0.12"
tokio = {version = "1.0", features = ["full", "sync"]}
tokio-stream = "0.1.10"
